// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart should render Loading message when user is not defined 1`] = `
<DocumentFragment>
  <div>
    Loading ...
  </div>
</DocumentFragment>
`;

exports[`Cart should render component when user is defined 1`] = `
<DocumentFragment>
  <div
    class="container"
    data-testid="cart"
  >
    Mock ProductTableMock Summary
  </div>
</DocumentFragment>
`;
